Practical Slips added Favicon added

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
             <img src="./Images/r.svg.png" alt="" height="100px" width="100px">
             <h2><a href="./r.html">R Programming</a></h2> 
         </div>
+        <div class="col" id="col4">
+            <img src="./Images/prac.png" alt="" height="100px" width="100px">
+            <h2><a href="./practical.html">Practical Exams</a></h2> 
+        </div>
     </div>
     <br>
-    <div>Made with 💖 by Pratik</div>
+    <!-- <div>Made with 💖 by Pratik</div> -->
     <div></div>
 
     <script src="main.js"></script>
