Title of the practical slips page updated

--- a/practical.html
+++ b/practical.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Java</title>
+    <title>Practical Slips</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: rgba(252, 182, 231, 0.493)">
