--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <br>
-    <!-- <div>Made with 💖 by Pratik</div> -->
+    <div>Made with 💖 by Pratik</div>
     <div></div>
 
     <script src="main.js"></script>
