Added sem 6 subjects

--- a/Sem5/practical.html
+++ b/Sem5/practical.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical Slips</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body style="background-color: rgba(252, 182, 231, 0.493)">
     <h2>Execution made easier 😉!!</h2>
