Playground for 3 Languages added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <img src="./Images/prac.png" alt="" height="100px" width="100px">
             <h2><a href="./Sem6/pratical.html">Practical Exams</a></h2> 
         </div>
+        <div class="col" id="col8">
+            <img src="./Images/code-playground.svg" alt="" height="100px" width="100px">
+            <h2><a href="./Sem6/playground.html">Coding Playground</a></h2> 
+        </div>
 
 
 
