--- a/Sem6/pg_c.html
+++ b/Sem6/pg_c.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C Playground</title>
 </head>
-<body>
-    <div data-pym-src="https://www.jdoodle.com/embed/v1/6d165635cf371e92"></div>
+<body style="background-color: rgb(189, 187, 187);"><center>
+    <h1>C Playground</h1>
+    <div data-pym-src="https://www.jdoodle.com/embed/v1/6d165635cf371e92" style="width: 70%;"></div></center>
     <script src="https://www.jdoodle.com/assets/jdoodle-pym.min.js" type="text/javascript"> </script>
 </body>
 </html>
