--- a/Sem6/pg_go.html
+++ b/Sem6/pg_go.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <div data-pym-src="https://www.jdoodle.com/embed/v1/2c6f27dc6c0dc081"></div>
+<body style="background-color: rgb(189, 187, 187);"><center>
+    <h1>GO Playground</h1>
+    <div data-pym-src="https://www.jdoodle.com/embed/v1/2c6f27dc6c0dc081" style="width: 70%;"></div>
+    </center>
     <script src="https://www.jdoodle.com/assets/jdoodle-pym.min.js" type="text/javascript"> </script>
 </body>
 </html>
