--- a/Sem5/java.html
+++ b/Sem5/java.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Get your practicals done!!</h2>
     <ul>
-        <div id="ass1"><a href="./Java/ass1.html">Assignment 1</a><br><br></div>
+        <div id="ass1"><a href="../Java/ass1.html">Assignment 1</a><br><br></div>
         <div id="ass2"><a href="#">Assignment 2</a><br><br></div>
         <div id="ass3"><a href="https://miniature-pot-122.notion.site/Assignment-3-2c2070621f07467e80987be577283804?pvs=4">Assignment 3</a><br><br></div>
         <div id="ass6"><a href="https://miniature-pot-122.notion.site/Assignment-6-a9e6df31d20e41b28e2882b2ba62501c?pvs=4">Assignment 6</a><br><br></div>
