--- a/Sem5/os.html
+++ b/Sem5/os.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Get your practicals done!!</h2>
     <ul>
-        <div id="ass1"><a href="./Java/ass1.html">Assignment 1</a><br><br></div>
+        <div id="ass1"><a href="../Java/ass1.html">Assignment 1</a><br><br></div>
         <div id="ass2"><a href="#">Assignment 2</a><br><br></div>
         <div id="ass3"><a href="./dsa.pdf">Assignment 3</a><br><br></div>
         <div id="ass4"><a href="./OS/ass4.html">Assignment 4</a><br><br></div>
