--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col" id="col8">
             <img src="./Images/prac.png" alt="" height="100px" width="100px">
-            <h2><a href="./Sem6/pratical.html">Practical Exams</a></h2> 
+            <h2><a href="./Sem6/practical.html">Practical Exams</a></h2> 
         </div>
         <div class="col" id="col9">
             <img src="./Images/code-playground.svg" alt="" height="100px" width="100px">
